--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@
 
 
     <div class="row" id="row-header">
+
         <div class="col-md-4">
             <div class="logo">
                 <img src="./assets/img/logo.png" alt="logo" class="logo">
             </div>
         </div>
-        <div class="col-md-5">
+
+        <div class="col-md-5 main-menu">
             <nav class="menu">
                 <ul class="menu-list">
                     <li class="menu-item">
@@ -33,16 +35,18 @@
                     <li class="menu-item">
                         <a href="#" class="menu-link">Contact</a>
                     </li>
-
                 </ul>
             </nav>
         </div>
-        <div class="col-md-3">
+
+        <div class="col-md-3 header-icons">
             <div class="icons">
+                <a href="#" class="icon-link mobile-menu-toggle">
+                    <i class="fa-solid fa-bars"></i>
+                </a>
                 <a href="#" class="icon-link">
                     <i class="fa-solid fa-cart-shopping"></i>
                 </a>
-
             </div>
         </div>
     </div>
@@ -146,25 +150,19 @@
                 <a href="#">Shop new arrival <i class="fa-solid fa-chevron-right"></i></a>
             </div>
             <div class="row row-arrival">
-                <div class="col-md-4">
-
-                    <img src="./assets/img/arrival.jpg" alt="arrival" class="picArrival a">
-                    <img src="./assets/img/arrival.jpg" alt="arrival" class="picArrival b">
-
+                <div class="col-main">
+                    <img src="./assets/img/arrival.jpg" alt="arrival 1" class="picArrival large-img mb-2">
+                    <img src="./assets/img/arrival.jpg" alt="arrival 2" class="picArrival small-img">
                 </div>
-                <div class="col-md-4">
-                    <img src="./assets/img/arrival.jpg" alt="arrival" class="picArrival c">
-                    <img src="./assets/img/arrival.jpg" alt="arrival" class="picArrival d">
-
+                <div class="col-main">
+                    <img src="./assets/img/arrival.jpg" alt="arrival 3" class="picArrival small-img mb-2">
+                    <img src="./assets/img/arrival.jpg" alt="arrival 4" class="picArrival large-img">
                 </div>
-                <div class="col-md-4">
-                    <img src="./assets/img/arrival.jpg" alt="arrival" class="picArrival e">
-                    <img src="./assets/img/arrival.jpg" alt="arrival" class="picArrival f">
+                <div class="col-main">
+                    <img src="./assets/img/arrival.jpg" alt="arrival 5" class="picArrival large-img mb-2">
+                    <img src="./assets/img/arrival.jpg" alt="arrival 6" class="picArrival small-img">
                 </div>
-
             </div>
-        </div>
-
         </div>
     </section>
     <!-- secton two piece -->
